Travel::Status::DE::IRIS 1.76 - Sun Dec 11 2022

    * Improve handling of stations that are not yet present in IRIS
      ("Betriebsstelle nicht bekannt 1234567")
    * Update station list

Travel::Status::DE::IRIS 1.75 - Sun Dec 04 2022

    * Update station list
    * Note that station names are no longer considered unique.
      get_stations() and the get_station_by_... set of functions may return
      multiple entries with the same name, but different DS100 and EVA IDs.
      For now, get_station_by_name() retains its behaviour of only returning a
      single match if the name matches exactly -- for multiple stations with
      the same name, it returns the one with the lowest EVA number.
      get_station_by_name() return value and semantics may change in a future
      major release.

Travel::Status::DE::IRIS 1.74 - Tue Nov 22 2022

    * Stations: Use GIS::Distance, as documented. Release 1.73 accidentally
      used Geo::Distance in the bundled Stations.pm file instead.

Travel::Status::DE::IRIS 1.73 - Sat Nov 19 2022

    * Result: Add arrival_hidden and departure_hidden accessors

Travel::Status::DE::IRIS 1.72 - Mon Oct 03 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.71 - Sun Oct 02 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.70 - Sat Sep 03 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.69 - Tue Aug 02 2022

    * Repair Travel::Status::DE::IRIS::Stations module
      (broken in Release 1.68)

Travel::Status::DE::IRIS 1.68 - Mon Aug 01 2022

    * Update IRIS station list

Travel::Status::DE::IRIS 1.67 - Tue Jul 26 2022

    * IRIS->new_p: Fix bug in related_stations accessor
    * Update IRIS station list

Travel::Status::DE::IRIS 1.66 - Sun Jun 26 2022

    * Treat Essen-Dellwig and Essen-Dellwig Ost as separate stations.
      Although they are grouped in the IRIS backend, they are distinct
      stations. Both have platforms 1 & 2, so grouping them leads to confusion.